fix text overflow

--- a/view/src/components/Category.css
+++ b/view/src/components/Category.css
@@ -61,6 +61,9 @@
 .category .category-button__categories[value] {
     text-align: left;
     padding-left: 92px;
+    overflow-x: hidden;
+    white-space: nowrap;
+    width: 200px;
 }
 
 .category .category-image {
